Seller Name, Address and Phone Number Extraction. Works only for Rohilya Foods Pvt. Ltd.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:theme="@style/AppTheme">
         <meta-data
                 android:name="com.google.firebase.ml.vision.DEPENDENCIES"
-                android:value="ocr" />
+                android:value="ocr, barcode" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
