--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:22.0.0'
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation 'com.firebaseui:firebase-ui-database:5.0.0'
+
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
+
+    // FirebaseUI for Firebase Auth
+    implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
+
+    // FirebaseUI for Cloud Storage
+    implementation 'com.firebaseui:firebase-ui-storage:5.0.0'
 
 }
