--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     // FirebaseUI for Cloud Storage
     implementation 'com.firebaseui:firebase-ui-storage:5.0.0'
 
+    implementation 'me.xdrop:fuzzywuzzy:1.2.0'
+
+
 }
