--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,8 @@ dependencies {
 
     implementation 'me.xdrop:fuzzywuzzy:1.2.0'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation("com.squareup.okhttp3:okhttp:4.0.1")
 
 }
